# rvariant

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  cpp.hint  rvariant.natvis
.github/workflows/: deploy_gh_page.yml  deploy_gh_page_for_PR.yml  run_test.yml
doc/: .gitignore  _spec-proxy.adoc  _std-indirect-proxy.adoc  _std-variant-proxy.adoc  docinfo.html  main.css  rvariant.adoc  rvariant.html
include/yk/: default_init_allocator.hpp  format_traits.hpp  hash.hpp  indirect.hpp  indirect_pmr.hpp  recursive_wrapper.hpp  rvariant.hpp
include/yk/core/: concepts.hpp  cond_trivial.hpp  config.hpp  hash.hpp  hash_fwd.hpp  io.hpp  library.hpp  requirements.hpp  seq.hpp  type_traits.hpp
include/yk/detail/: cond_trivial.hpp  convert_index.hpp  exactly_once.hpp  find_index.hpp  is_in.hpp  is_specialization_of.hpp  is_unique.hpp  lang_core.hpp  pack_indexing.hpp  recursive_traits.hpp  subset_like.hpp  type_list.hpp
include/yk/rvariant/: pack.hpp  recursive_wrapper.hpp  recursive_wrapper_pmr.hpp  rvariant.hpp  rvariant_io.hpp  subset.hpp  variant_helper.hpp
include/yk/rvariant/detail/: recursive_traits.hpp  rvariant_fwd.hpp  variant_requirements.hpp  variant_storage.hpp  visit.hpp
main/: rvariant.html
pull/17/: rvariant.html
pull/18/: rvariant.html
pull/27/: rvariant.html
pull/35/: rvariant.html
pull/42/: rvariant.html
pull/45/: rvariant.html
test/: CMakeLists.txt  benchmark.cpp  benchmark_support.cpp  benchmark_support.hpp  core_test.cpp  cpp.hint  dummy.cpp  flexible_test.cpp  get_visit_test.cpp  indirect_test.cpp  io_test.cpp  many_alternatives_32_test.cpp  recursive_test.cpp  recursive_wrapper_test.cpp  rvariant_test.cpp  rvariant_test.hpp  test.cpp  truly_recursive_test.cpp
